[metadata]
name = flask-admin-csv-model
version = attr: flask_admin_csv_model.contrib.csv.__version__
description = A CSV-file model backend for Flask-Admin
long_description = file: README.md
long_description_content_type = text/markdown
keywords = flask-admin, csv
license = BSD-3-Clause
url = https://github.com/fholmer/flask-admin-csv-model
project_urls =
    Source Code = https://github.com/fholmer/flask-admin-csv-model
author = Frode Holmer
author_email = fholmer+flask@gmail.com
classifiers = 
    Framework :: Flask
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
install_requires = file: requirements.txt
packages = find:

[options.packages.find]
include =
    flask_admin_csv_model*

[flake8]
max-line-length = 88
extend-ignore = E203
extend-exclude = .venv/

[isort]
profile = black
